--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
     "@types/webpack": "^4.41.12",
     "@wingsuit-designsystem/pattern": "0.2.9-alpha.0",
     "@wingsuit-designsystem/storybook": "0.2.9-alpha.0",
-    "@wingsuit-designsystem/twig-loader": "0.2.9-alpha.0",
+    "twig-loader": "https://github.com/AmazeeLabs/twig-loader",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
