--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -40,15 +40,6 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@storybook/addon-a11y": "^5.3.17",
-    "@storybook/addon-actions": "^5.3.17",
-    "@storybook/addon-backgrounds": "^5.3.17",
-    "@storybook/addon-centered": "^5.3.17",
-    "@storybook/addon-docs": "^5.3.17",
-    "@storybook/addon-knobs": "^5.3.17",
-    "@storybook/addon-links": "^5.3.17",
-    "@storybook/addon-notes": "^5.3.17",
-    "@storybook/addon-storysource": "^5.3.17",
     "@storybook/addon-viewport": "^5.3.17",
     "@wingsuit-designsystem/core": "0.2.9-alpha.0",
     "@wingsuit-designsystem/generator-new-component": "0.2.9-alpha.0",
@@ -69,16 +60,16 @@
     "lodash": "^4.17.15",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.3",
-    "webpack": "^4.41.3"
+    "webpack": "^4.41.3",
+    "stylelint-scss": "^3.17.2",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "yo": "^3.1.1",
+    "require-context": "^1.1.0"
   },
   "dependencies": {
     "alpinejs": "^1.10.1",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "require-context": "^1.1.0",
-    "stylelint-scss": "^3.17.2",
     "svg4everybody": "^2.1.9",
-    "tailwindcss": "^1.2.0",
-    "yo": "^3.1.1"
+    "tailwindcss": "^1.2.0"
   },
   "gitHead": "f05a12fa1c39691ee150ae453e7665bdf2930a5e"
 }
