--- a/packages/generator-new-component/package.json
+++ b/packages/generator-new-component/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@wingsuit-designsystem/generator-new-component",
-  "version": "0.2.9-alpha.0",
+  "version": "0.2.9-alpha.1",
   "description": "Generate a Wingsut component",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
+    "@wingsuit-designsystem/core": "0.2.9-alpha.1",
     "gulp-rename": "<=1.2.2",
     "lodash": "^4.17.15",
     "yeoman-generator": "^4.3.0",
-    "yeoman-test": "^2.0.0",
-    "@wingsuit-designsystem/core": "0.2.9-alpha.0"
+    "yeoman-test": "^2.0.0"
   },
   "main": "./dist/generators/app/index.js",
   "files": [
