--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/wingsuit",
-  "version": "0.2.9-alpha.0",
+  "version": "0.2.9-alpha.1",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
@@ -41,14 +41,15 @@
     "@babel/preset-env": "^7.8.4",
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@storybook/addon-viewport": "^5.3.17",
-    "@wingsuit-designsystem/core": "0.2.9-alpha.0",
-    "@wingsuit-designsystem/generator-new-component": "0.2.9-alpha.0",
-    "@wingsuit-designsystem/storybook": "0.2.9-alpha.0",
+    "@wingsuit-designsystem/core": "0.2.9-alpha.1",
+    "@wingsuit-designsystem/generator-new-component": "0.2.9-alpha.1",
+    "@wingsuit-designsystem/storybook": "0.2.9-alpha.1",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-webpack": "^0.12.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
@@ -60,11 +61,10 @@
     "lodash": "^4.17.15",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.3",
-    "webpack": "^4.41.3",
+    "require-context": "^1.1.0",
     "stylelint-scss": "^3.17.2",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "yo": "^3.1.1",
-    "require-context": "^1.1.0"
+    "webpack": "^4.41.3",
+    "yo": "^3.1.1"
   },
   "dependencies": {
     "alpinejs": "^1.10.1",
