--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -37,7 +37,8 @@
     "faker": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "twig": "~1.15.1",
-    "twing": "^3.1.1"
+    "twing": "^3.1.1",
+    "twig-drupal-filters": "^2.0.0"
   },
   "gitHead": "f05a12fa1c39691ee150ae453e7665bdf2930a5e"
 }
