- Switch to @storybook/react - Add Docs components.

--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -31,11 +31,10 @@
   "type": "module",
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@storybook/addon-centered": "^5.3.17",
-    "@storybook/addon-docs": "^5.3.17",
-    "@storybook/addon-knobs": "^5.3.17",
+    "@storybook/addon-docs": "^6.0.0-beta.6",
+    "@storybook/addon-knobs": "^6.0.0-beta.6",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.3.17",
+    "@storybook/react": "^6.0.0-beta.6",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/pattern": "0.2.9-alpha.2",
