--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -64,7 +64,9 @@
     "require-context": "^1.1.0",
     "stylelint-scss": "^3.17.2",
     "webpack": "^4.41.3",
-    "yo": "^3.1.1"
+    "yo": "^3.1.1",
+    "postcss-nested": "^4.2.1",
+    "autoprefixer": "^9.7.4"
   },
   "dependencies": {
     "@types/react": "^16.9.35",
