--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.2.9-alpha.2",
+  "version": "0.3.0",
   "registry": "https://registry.npmjs.org",
   "npmClient": "yarn"
 }
