--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/wingsuit",
-  "version": "0.2.9-alpha.2",
+  "version": "0.3.0",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
@@ -42,11 +42,12 @@
     "@babel/preset-env": "^7.8.4",
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@storybook/addon-viewport": "^5.3.17",
-    "@wingsuit-designsystem/core": "0.2.9-alpha.2",
-    "@wingsuit-designsystem/cli": "0.2.9-alpha.2",
+    "@wingsuit-designsystem/cli": "0.3.0",
+    "@wingsuit-designsystem/core": "0.3.0",
     "@wingsuit-designsystem/generator-new-component": "0.2.9-alpha.2",
-    "@wingsuit-designsystem/pattern": "0.2.9-alpha.2",
-    "@wingsuit-designsystem/storybook": "0.2.9-alpha.2",
+    "@wingsuit-designsystem/pattern": "0.3.0",
+    "@wingsuit-designsystem/storybook": "0.3.0",
+    "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
@@ -62,14 +63,13 @@
     "fibers": "^4.0.2",
     "holderjs": "^2.9.6",
     "lodash": "^4.17.15",
+    "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
     "stylelint-scss": "^3.17.2",
     "webpack": "^4.41.3",
-    "yo": "^3.1.1",
-    "postcss-nested": "^4.2.1",
-    "autoprefixer": "^9.7.4"
+    "yo": "^3.1.1"
   },
   "dependencies": {
     "@types/react": "^16.9.35",
