--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/cli",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "The Wingsuit CLI",
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit",
   "author": {
@@ -45,6 +45,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
+    "@wingsuit-designsystem/core": "0.3.1",
     "chalk": "^2.1.0",
     "eslint-plugin-react": "^7.15.1",
     "git-clone": "^0.1.0",
@@ -58,5 +59,5 @@
     "url": "git@github.com:wingsuit-designsystem/wingsuit.git",
     "directory": "packages/cli"
   },
-  "gitHead": "f05a12fa1c39691ee150ae453e7665bdf2930a5e"
+  "gitHead": "d705a02e4eebebd151d875bf96fee743d20534a3"
 }
