--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/wingsuit",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
@@ -41,12 +41,11 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@storybook/addon-viewport": "^5.3.17",
-    "@wingsuit-designsystem/cli": "0.3.0",
-    "@wingsuit-designsystem/core": "0.3.0",
-    "@wingsuit-designsystem/generator-new-component": "0.2.9-alpha.2",
-    "@wingsuit-designsystem/pattern": "0.3.0",
-    "@wingsuit-designsystem/storybook": "0.3.0",
+    "@storybook/addon-viewport": "^6.0.0-beta.6",
+    "@wingsuit-designsystem/cli": "0.3.1",
+    "@wingsuit-designsystem/core": "0.3.1",
+    "@wingsuit-designsystem/pattern": "0.3.1",
+    "@wingsuit-designsystem/storybook": "0.3.1",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
@@ -80,5 +79,5 @@
     "svg4everybody": "^2.1.9",
     "tailwindcss": "^1.2.0"
   },
-  "gitHead": "f05a12fa1c39691ee150ae453e7665bdf2930a5e"
+  "gitHead": "d705a02e4eebebd151d875bf96fee743d20534a3"
 }
