Update demo patterns to the new folder structure.

--- a/packages/wingsuit/source/default/patterns/01-atoms/image/image.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/image/image.wingsuit.yml
@@ -1,5 +1,5 @@
 image:
-  use: "@atoms/image/_image.twig"
+  use: "@atoms/image/image.twig"
   label: Image
   description: Image component
   fields:
