WS #00: general update.

--- a/packages/wingsuit/source/default/_patterns/01-atoms/image/image.wingsuit.yml
+++ b/packages/wingsuit/source/default/_patterns/01-atoms/image/image.wingsuit.yml
@@ -15,6 +15,10 @@ image:
     bg:
       label: Background
   settings:
+    circle:
+      label: Circle
+      type: boolean
+      default_value: false
     placeholder:
       label: Placeholder
       type: boolean
