--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,6 +49,7 @@
     "chalk": "^2.1.0",
     "eslint-plugin-react": "^7.15.1",
     "git-clone": "^0.1.0",
+    "gulp-rename": "^2.0.0",
     "lerna": "^3.20.2",
     "typescript": "^3.4.0",
     "yeoman-environment": "^2.10.2",
