WS #00: total updates,

--- a/packages/wingsuit/apps/storybook/config/article.config.yml
+++ b/packages/wingsuit/apps/storybook/config/article.config.yml
@@ -1,8 +1,7 @@
 content:
-  join():
-    include():
-      pattern: molecules-card
+  - join():
+    - include():
+      pattern: templates-article
       with:
-        variant: horizontal
         attributes:
           Attribute(): {}
