Cleanup demo pattern.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -3,7 +3,7 @@ button:
   label: Button
   description: Button with different variants.
   fields:
-    button_content:
+    content:
       type: text
       label: Content
       preview: More
