Fix doc page rendering.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -1,7 +1,7 @@
 button:
   use: "@atoms/button/button.twig"
   label: Button
-  description: Button with different variants.
+  description: Beautiful button made with love
   fields:
     content:
       type: text
