Update circle config.

--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -18,9 +18,8 @@
     "prototyping"
   ],
   "scripts": {
-    "packtracker-upload": "packtracker-upload",
     "build-storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -c ./apps/storybook",
-    "packtracker": "yarn storybook --smoke-test --quiet && cross-env PT_PROJECT_TOKEN=18f3c689-6831-4937-90e6-6cfeed5858c6 packtracker-upload --stats=./node_modules/.cache/storybook/manager-stats.json",
+    "packtracker": "yarn storybook -c ./apps/storybook --smoke-test --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=./node_modules/.cache/storybook/preview-stats.json",
     "storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 9011 -c ./apps/storybook --no-dll"
   },
   "devDependencies": {
