--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "node ./scripts/test.js",
     "bootstrap": "node ./scripts/bootstrap.js",
     "build": "node ./scripts/build-package.js",
+    "lint": "yarn lint:js . && yarn lint:md .",
     "lint:js": "cross-env NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives packages",
     "fix:js": "cross-env NODE_ENV=production eslint --fix --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives",
     "publish:debug": "npm run publish:latest -- --npm-tag=debug --no-push",
@@ -35,6 +36,12 @@
     "http-server": "^0.12.3",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "eslint-plugin-cypress": "^2.10.1",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.0",
+    "enquirer": "^2.3.5",
+    "p-limit": "^2.3.0",
+    "shelljs": "^0.8.4",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
