--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "enquirer": "^2.3.5",
     "p-limit": "^2.3.0",
     "shelljs": "^0.8.4",
+    "coverage": "codecov",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
@@ -81,6 +82,7 @@
     "jest-teamcity": "^1.7.0",
     "jest-vue-preprocessor": "^1.5.0",
     "jest-watch-typeahead": "^0.4.0",
+    "codecov": "^3.5.0",
     "lerna": "^3.20.2",
     "prettier": "^2.0.2",
     "raf": "^3.4.0",
