--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
         environment:
           TERM: xterm
     working_directory: /tmp/storybook
-    parallelism: 10
+    parallelism: 2
     steps:
       - checkout
       - attach_workspace:
@@ -108,7 +108,7 @@ jobs:
           command: yarn config set registry http://localhost:6000/
       - run:
           name: test local registry
-          command: yarn info @storybook/core
+          command: yarn info @wingsuit-designsystem/core
       - run:
           name: run e2e tests
           command: yarn test:e2e-framework
@@ -138,7 +138,7 @@ jobs:
           command: yarn config set registry http://localhost:6000/
       - run:
           name: test local registry
-          command: yarn info @storybook/core
+          command: yarn info @wingsuit-designsystem/core
       - run:
           name: run e2e tests
           command: yarn test:e2e-framework yarn2Cra
