--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "yarn lint:js . && yarn lint:md .",
     "lint:js": "cross-env NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives packages",
     "fix:js": "cross-env NODE_ENV=production eslint --fix --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives",
+    "lint:md": "remark -q",
     "publish:debug": "npm run publish:latest -- --npm-tag=debug --no-push",
     "publish:latest": "lerna publish --exact --concurrency 1 --force-publish",
     "publish:next": "npm run publish:latest -- --npm-tag=next",
@@ -30,9 +31,14 @@
   ],
   "optionalDependencies": {
     "@cypress/webpack-preprocessor": "^5.1.2",
-    "cypress": "^4.5.0"
+    "cypress": "^4.5.0",
+    "verdaccio": "^4.5.1",
+    "verdaccio-auth-memory": "^9.4.0"
   },
   "devDependencies": {
+    "remark-cli": "^8.0.0",
+    "remark-lint": "^7.0.0",
+    "remark-preset-lint-recommended": "^4.0.0",
     "esm": "^3.2.25",
     "http-server": "^0.12.3",
     "@babel/cli": "^7.8.4",
@@ -83,7 +89,7 @@
     "jest-teamcity": "^1.7.0",
     "jest-vue-preprocessor": "^1.5.0",
     "jest-watch-typeahead": "^0.4.0",
-    "codecov": "^3.5.0",
+    "codecov": "^3.7.0",
     "lerna": "^3.20.2",
     "prettier": "^2.0.2",
     "raf": "^3.4.0",
