--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "raf": "^3.4.0",
     "typescript": "^3.4.0",
     "downlevel-dts": "^0.4.0",
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "ts-node": "^8.9.1"
   }
 }
