Fix codecov error.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@wingsuit-designsystem/root",
   "private": true,
   "scripts": {
+    "coverage": "codecov",
     "test": "node ./scripts/test.js",
     "bootstrap": "node ./scripts/bootstrap.js",
     "build": "node ./scripts/build-package.js",
@@ -49,7 +50,6 @@
     "enquirer": "^2.3.5",
     "p-limit": "^2.3.0",
     "shelljs": "^0.8.4",
-    "coverage": "codecov",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
@@ -89,9 +89,10 @@
     "jest-teamcity": "^1.7.0",
     "jest-vue-preprocessor": "^1.5.0",
     "jest-watch-typeahead": "^0.4.0",
-    "codecov": "^3.7.0",
+    "codecov": "^3.5.0",
     "lerna": "^3.20.2",
     "prettier": "^2.0.2",
+    "node-cleanup": "^2.1.2",
     "raf": "^3.4.0",
     "typescript": "^3.4.0",
     "downlevel-dts": "^0.4.0",
