--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "verdaccio-auth-memory": "^9.4.0"
   },
   "devDependencies": {
+    "trash": "^6.1.1",
     "remark-cli": "^8.0.0",
     "remark-lint": "^7.0.0",
     "remark-preset-lint-recommended": "^4.0.0",
