--- a/package.json
+++ b/package.json
@@ -1,6 +1,31 @@
 {
   "name": "@wingsuit-designsystem/root",
-  "version": "0.4.4",
+  "engines": {
+    "node": ">=8.10.0",
+    "yarn": ">=1.3.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.html": [
+      "yarn lint:js --fix"
+    ],
+    "*.js": [
+      "yarn lint:js --fix"
+    ],
+    "*.jsx": [
+      "yarn lint:js --fix"
+    ],
+    "*.ts": [
+      "yarn lint:js --fix"
+    ],
+    "*.tsx": [
+      "yarn lint:js --fix"
+    ]
+  },
   "private": true,
   "scripts": {
     "coverage": "codecov",
