--- a/scripts/verdaccio.yaml
+++ b/scripts/verdaccio.yaml
@@ -16,49 +16,11 @@ uplinks:
     cache: true
 
 packages:
-  # storybook's 'legacy' packages
-  '@storybook/react-simple-di':
-    access: $all
-    publish: $all
-    proxy: npmjs
-  '@storybook/react-stubber':
-    access: $all
-    publish: $all
-    proxy: npmjs
-
-  # storybook's packages not hosted in this monorepo
-  '@storybook/csf':
-    access: $all
-    publish: $all
-    proxy: npmjs
-  '@storybook/preset-*':
-    access: $all
-    publish: $all
-    proxy: npmjs
-
   # storybook packages are NOT proxied to global registry
   # allowing us to republish any version during tests
-  '@storybook/*':
+  '@wingsuit-designsystem/*':
     access: $all
     publish: $all
-
-  'sb':
-    access: $all
-    publish: $all
-
-  'storybook':
-    access: $all
-    publish: $all
-
-  '@*/*':
-    access: $all
-    publish: $all
-    proxy: npmjs
-
-  '**':
-    access: $all
-    publish: $all
-    proxy: npmjs
 
 logs:
   - { type: stdout, format: pretty, level: warn }
