--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "verdaccio-auth-memory": "^9.4.0"
   },
   "devDependencies": {
+    "wait-on": "^4.0.0",
     "trash": "^6.1.1",
     "remark-cli": "^8.0.0",
     "remark-lint": "^7.0.0",
