--- a/package.json
+++ b/package.json
@@ -64,27 +64,15 @@
     "verdaccio-auth-memory": "^9.4.0"
   },
   "devDependencies": {
-    "wait-on": "^4.0.0",
-    "trash": "^6.1.1",
-    "remark-cli": "^8.0.0",
-    "remark-lint": "^7.0.0",
-    "remark-preset-lint-recommended": "^4.0.0",
-    "esm": "^3.2.25",
-    "http-server": "^0.12.3",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
-    "eslint-plugin-cypress": "^2.10.1",
-    "express": "^4.17.1",
-    "fs-extra": "^9.0.0",
-    "enquirer": "^2.3.5",
-    "p-limit": "^2.3.0",
-    "shelljs": "^0.8.4",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-react-constant-elements": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
@@ -96,12 +84,20 @@
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "babel-plugin-require-context-hook": "^1.0.0",
-    "@babel/plugin-transform-runtime": "^7.9.0",
+    "codecov": "^3.5.0",
+    "concurrently": "^5.1.0",
     "cross-env": "^7.0.0",
+    "downlevel-dts": "^0.4.0",
+    "enquirer": "^2.3.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^6.5.1",
+    "eslint-plugin-cypress": "^2.10.1",
     "eslint-plugin-react": "^7.15.1",
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.0",
+    "http-server": "^0.12.3",
     "jest": "^25.2.4",
     "jest-cli": "^25.2.4",
     "jest-config": "^25.2.4",
@@ -118,14 +114,18 @@
     "jest-teamcity": "^1.7.0",
     "jest-vue-preprocessor": "^1.5.0",
     "jest-watch-typeahead": "^0.4.0",
-    "codecov": "^3.5.0",
     "lerna": "^3.20.2",
-    "prettier": "^2.0.2",
     "node-cleanup": "^2.1.2",
+    "p-limit": "^2.3.0",
+    "prettier": "^2.0.2",
     "raf": "^3.4.0",
+    "remark-cli": "^8.0.0",
+    "remark-lint": "^7.0.0",
+    "remark-preset-lint-recommended": "^4.0.0",
+    "shelljs": "^0.8.4",
+    "trash": "^6.1.1",
+    "ts-node": "^8.9.1",
     "typescript": "^3.4.0",
-    "downlevel-dts": "^0.4.0",
-    "concurrently": "^5.1.0",
-    "ts-node": "^8.9.1"
+    "wait-on": "^4.0.0"
   }
 }
