Fix cypress e2e test. Add examples to cache path.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
+            - examples
             - node_modules
             - packages
   build:
