--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -1,12 +1,12 @@
 {
   "name": "official-wingsuit",
   "private": true,
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
   "author": {
-    "name": "KEY-TEC",
+    "name": "christian.wiedemann@key-tec.de",
     "url": "https://github.com/wingsuit-designsystem/"
   },
   "repository": {
@@ -28,10 +28,10 @@
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-viewport": "^6.0.0-beta.6",
     "@storybook/react": "^6.0.0-beta.6",
-    "@wingsuit-designsystem/cli": "0.4.4",
-    "@wingsuit-designsystem/core": "0.4.4",
-    "@wingsuit-designsystem/pattern": "0.4.4",
-    "@wingsuit-designsystem/storybook": "0.4.4",
+    "@wingsuit-designsystem/cli": "0.4.5",
+    "@wingsuit-designsystem/core": "0.4.5",
+    "@wingsuit-designsystem/pattern": "0.4.5",
+    "@wingsuit-designsystem/storybook": "0.4.5",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
