Add root cache to cache path.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
             - examples
             - node_modules
             - packages
+            - /root/.cache
   build:
     <<: *defaults
     steps:
