--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-viewport": "^6.0.0-beta.6",
     "@storybook/react": "^6.0.0-beta.6",
+    "@storybook/linter-config": "^2.5.0",
     "@wingsuit-designsystem/cli": "0.4.6",
     "@wingsuit-designsystem/core": "0.4.6",
     "@wingsuit-designsystem/pattern": "0.4.6",
