--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/wingsuit",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
@@ -34,20 +34,18 @@
     "test:unit:default": "NODE_ENV=test jest --projects source/default/",
     "test:unit": "npm run test:unit:default",
     "test": "npm run test:unit",
-    "ci": "npm run lint && npm run test && npm run build:drupal",
-    "new": "yo @wingsuit-designsystem/new-component",
-    "yo": "yo"
+    "ci": "npm run lint && npm run test && npm run build:drupal"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-viewport": "^6.0.0-beta.6",
-    "@storybook/react": "^6.0.0-beta.6",
     "@storybook/linter-config": "^2.5.0",
-    "@wingsuit-designsystem/cli": "0.4.6",
-    "@wingsuit-designsystem/core": "0.4.6",
-    "@wingsuit-designsystem/pattern": "0.4.6",
-    "@wingsuit-designsystem/storybook": "0.4.6",
+    "@storybook/react": "^6.0.0-beta.6",
+    "@wingsuit-designsystem/cli": "0.4.7",
+    "@wingsuit-designsystem/core": "0.4.7",
+    "@wingsuit-designsystem/pattern": "0.4.7",
+    "@wingsuit-designsystem/storybook": "0.4.7",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
