--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -19,10 +19,10 @@
   "scripts": {
     "dev:storybook": "start-storybook --config-dir apps/storybook",
     "build:storybook": "build-storybook --config-dir apps/storybook -o ./dist/app-storybook",
-    "build-storybook": "yarn build:storybook",
+    "build-storybook": "build-storybook",
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack --config ./apps/drupal/webpack.config.js\"",
-    "lint:js": "eslint --ext .js,.vue ./",
+    "lint:js": "eslint --ext .js ./",
     "lint:css": "stylelint '**/*.css'",
     "lint": "npm run lint:js; npm run lint:css;",
     "fmt:js": "eslint --fix --ext .js,.vue ./",
