--- a/packages/wingsuit/apps/drupal/wingsuit.info.yml
+++ b/packages/wingsuit/apps/drupal/wingsuit.info.yml
@@ -1,6 +1,6 @@
 name: Wingsuit
 type: theme
-description: A Theme with Pattern Lab and Tailwind
+description: A Theme for UIPatterns and Storybook.
 base theme: stable
 core: 8.x
 libraries:
@@ -19,13 +19,13 @@ component-libraries:
     paths: []
   atoms:
     paths:
-      - ../../dist/app-drupal/assets/atomic/_patterns/01-atoms
+      - ../../dist/app-drupal/assets/atomic/patterns/01-atoms
   molecules:
     paths:
-      - ../../dist/app-drupal/assets/atomic/_patterns/02-molecules
+      - ../../dist/app-drupal/assets/atomic/patterns/02-molecules
   organisms:
     paths:
-      - ../../dist/app-drupal/assets/atomic/_patterns/03-organisms
+      - ../../dist/app-drupal/assets/atomic/patterns/03-organisms
   templates:
     paths: []
   pages:
