WS #00: small changes.

--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
@@ -3,7 +3,11 @@ footer:
   label: Footer
   description: The footer pattern.
   fields:
-    menu:
+    slogan:
+      type: text
+      label: Slogan
+      preview: "Wingsuit flyer"
+    footer_menu:
       type: pattern
       label: Menu
       preview:
