--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -34,9 +34,6 @@ card:
       description: An optional button at the bottom of the card.
       preview:
         faker: lorem.word
-  variants:
-    default:
-      label: Default
     horizontal:
       label: Horizontal
       description: Image left - text right on desktop.
@@ -44,7 +41,11 @@ card:
     alignment:
       type: select
       label: Alignment
-      required: false
+      required: true
+      default: left
       options:
         left: Left
         center: Center
+    url:
+      type: link
+      label: Url
