WS #25: Refactor Atoms.

--- a/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
@@ -1,9 +1,9 @@
-button:
-  use: "@atoms/button/button.twig"
-  label: Button
-  description: Beautiful button made with love
+hamburger:
+  use: "@atoms/hamburger/hamburger.twig"
+  label: hamburger
+  description: Beautiful hamburger made with love
   fields:
-    content:
+    dummy:
       type: text
       label: Content
       preview: More
