--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
@@ -1,7 +1,7 @@
 header:
   use: "@organisms/header/header.twig"
   label: Header
-  description: The header pattern.
+  description: The header pattern with logo and menu.
   fields:
     menu:
       type: pattern
