--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,7 @@ jobs:
           command: yarn await-serve-storybooks
       - run:
           name: cypress run
-          command: yarn test:e2e
+          command: yarn test:e2e --record --key 2311d788-c8ef-458b-b009-4cd3aee65180
 
   smoke-tests:
     <<: *defaults
