--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -71,7 +71,8 @@
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2",
-    "yaml-loader": "^0.6.0"
+    "yaml-loader": "^0.6.0",
+    "yargs": "^15.4.0"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
