--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,6 +162,9 @@ jobs:
           command: yarn serve-storybooks
           background: true
       - run:
+          name: install cypress
+          command: yarn install
+      - run:
           name: await running examples
           command: yarn await-serve-storybooks
       - run:
