--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,36 +117,36 @@ jobs:
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
-  examples-v2-yarn-2:
-    docker:
-      - image: cypress/included:4.7.0
-        environment:
-          TERM: xterm
-    working_directory: /tmp/storybook
+#  examples-v2-yarn-2:
+#    docker:
+#      - image: cypress/included:4.7.0
+#        environment:
+#          TERM: xterm
+#    working_directory: /tmp/storybook
     # parallelism: 10
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run:
-          name: running local registry
-          command: yarn local-registry --port 6000 --open
-          background: true
-      - run:
-          name: wait for registry
-          command: yarn wait-on http://localhost:6000
-      - run:
-          name: set registry
-          command: yarn config set registry http://localhost:6000/
-      - run:
-          name: test local registry
-          command: yarn info @wingsuit-designsystem/core
-      - run:
-          name: run e2e tests
-          command: yarn test:e2e-framework yarn2Cra
-      - store_artifacts:
-          path: /tmp/storybook/cypress
-          destination: cypress
+#    steps:
+ #     - checkout
+#      - attach_workspace:
+#          at: .
+#      - run:
+#          name: running local registry
+#          command: yarn local-registry --port 6000 --open
+#          background: true
+#      - run:
+#          name: wait for registry
+#          command: yarn wait-on http://localhost:6000
+#      - run:
+#          name: set registry
+#          command: yarn config set registry http://localhost:6000/
+#      - run:
+#          name: test local registry
+#          command: yarn info @wingsuit-designsystem/core
+#      - run:
+#          name: run e2e tests
+#          command: yarn test:e2e-framework yarn2Cra
+#      - store_artifacts:
+#          path: /tmp/storybook/cypress
+#          destination: cypress
   e2e:
     working_directory: /tmp/storybook
     docker:
