--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,9 +262,9 @@ workflows:
       - examples-v2:
           requires:
             - publish
-      - examples-v2-yarn-2:
-          requires:
-            - publish
+#      - examples-v2-yarn-2:
+#          requires:
+#            - publish
   deploy:
     jobs:
       - docs
