--- a/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
@@ -1,7 +1,7 @@
 hamburger:
   use: "@atoms/hamburger/hamburger.twig"
   label: hamburger
-  description: Beautiful hamburger made with love
+  description: Simple animated hamburger icon.
   fields:
     dummy:
       type: text
