--- a/scripts/verdaccio.yaml
+++ b/scripts/verdaccio.yaml
@@ -22,5 +22,47 @@ packages:
     access: $all
     publish: $all
 
+  # storybook's 'legacy' packages
+  '@storybook/react-simple-di':
+    access: $all
+    publish: $all
+    proxy: npmjs
+  '@storybook/react-stubber':
+    access: $all
+    publish: $all
+    proxy: npmjs
+
+  # storybook's packages not hosted in this monorepo
+  '@storybook/csf':
+    access: $all
+    publish: $all
+    proxy: npmjs
+  '@storybook/semver':
+    access: $all
+    publish: $all
+    proxy: npmjs
+  '@storybook/design-system':
+    access: $all
+    publish: $all
+    proxy: npmjs
+  '@storybook/preset-*':
+    access: $all
+    publish: $all
+    proxy: npmjs
+
+  # storybook packages are NOT proxied to global registry
+  # allowing us to republish any version during tests
+
+  '@*/*':
+    access: $all
+    publish: $all
+    proxy: npmjs
+
+  '**':
+    access: $all
+    publish: $all
+    proxy: npmjs
+
+
 logs:
   - { type: stdout, format: pretty, level: warn }
