WS #00: pagination and some updates.

--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -44,5 +44,6 @@ card:
         left: Left
         center: Center
     url:
-      type: link
+      type: token
       label: Url
+      preview: 'https://github.com/wingsuit-designsystem/wingsuit'
