--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
     "packages/*",
     "examples/*"
   ],
-  "version": "0.5.7",
+  "version": "1.0.0-beta.0",
   "registry": "https://registry.npmjs.org",
   "npmClient": "yarn"
 }
