Add remCalc to tailwind.config.

--- a/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
@@ -1,9 +1,5 @@
 hamburger:
   use: "@atoms/hamburger/hamburger.twig"
-  label: hamburger
+  label: Hamburger
   description: Simple animated hamburger icon.
-  fields:
-    dummy:
-      type: text
-      label: Content
-      preview: More
+
